--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>kangle一键脚本国内下载节点</title>
+<title>kangle一键脚本国际下载节点</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
 <script type='text/javascript' src='//cdn.bootcss.com/jquery/2.1.4/jquery.min.js'></script>
@@ -78,7 +78,7 @@ h2 { font-size: 1.2em; }
 <div style='position: absolute;width: 100%;color: white;top: 50px;'>
 	<div id="page">
 		<div id="header" class="status4xx">
-		    <h1> kangle一键脚本国内下载节点</h1>
+		    <h1> kangle一键脚本国际下载节点</h1>
 		</div>
 		<div id="content">
 		</div>
