--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ h2 { font-size: 1.2em; }
 		<div id="content">
 		</div>
 		<div id="footer">
-		<h3>All rights reserved  <a href='http://kangle.hjyvps.com/'>kangle.hjyvps.com</a></h3>
+		<h3>All rights reserved  <a href='http://www.kangle.info/'>www.kangle.info</a></h3>
 		</div>
 	</div>
 </div>
